metadata/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snp500-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snp500-frontend
  template:
    metadata:
      labels:
        app: snp500-frontend
    spec:
      containers:
        - name: frontend
          image: 694409028280.dkr.ecr.us-east-1.amazonaws.com/snp500-frontend:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: snp500-frontend
spec:
  selector:
    app: snp500-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
