metadata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snp500-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /(api.*)
            pathType: Prefix
            backend:
              service:
                name: snp500-backend
                port:
                  number: 5001
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: snp500-frontend
                port:
                  number: 3000
